      
      \item{Network initialization functions now return a pointer, and destroying functions free it.}
      
      \item{
	Miscellaneous improvements to low-level C code. In particular, more of the code now runs deterministically.
      }
      
      \item{
	Improvements to encapsulation of \code{Network} structures.
      }
    }
  }

  %% \subsection{UTILITIES}{
  %%   \itemize{
  %%     \item Likewise, "UTILITIES" is probably unnecessary.
  %%   }
  %% }

  %% \subsection{INSTALLATION}{
  %%   \itemize{
  %%     \item ... as is "INSTALLATION".
  %%   }
  %% }

  %% \subsection{PACKAGE INSTALLATION}{
  %%   \itemize{
  %%     \item ditto.
  %%   }
  %% }

}


\section{Changes in version 3.9.4}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item{
	A new API allows arbitrary combinations of dyad-level sample
	space constraints.
      }
      \item{
	Most terms that take categorical nodal attributes now have a \code{levels=} argument, which can be used to control the set and the ordering of the attribute levels.
      }
      \item{
	More informative error messages for term initialization.
      }
      \item{
	\code{\link{ergm.godfather}} has been reimplemented in the
	\code{ergm} package, along with its valued counterpart.
      }
      \item{
	New terms have been added or improved:
	\itemize{
	  \item{
	    \code{mm} for a more flexible specification
	    for mixing matrix and marginal effects;
	  }
	  \item{
	    valued versions of \code{sender}, \code{receiver},
	    \code{sociality} terms;
	  }
	  \item{
	    \code{ininterval} now allows interval openness to be
	    specified as a character string.
	  }
	}
      }
      \item{A new \code{term.options} control parameter allows additional
	arguments to be passed to term initializers.
      }
    }
  }


  \subsection{BUG FIXES}{
    \itemize{
      \item{
	A numerical instability in penalised pseudolikelihood
	calculation identified by Kevin Reuning has been fixed.
      }
      \item{