@@ -1,5 +1,5 @@
 Package: ergm
-Version: 3.10.0-4806
+Version: 3.10.0-4807
 Date: 2019-03-18
 Title: Fit, Simulate and Diagnose Exponential-Family Models for Networks
 Authors@R: c(
