@@ -116,6 +116,7 @@ int CheckConstrainedTogglesValid(MHProposal *MHp, Network *nwp);
 
 /* Helper macros */
 #define MH_INPUTS MHp->inputs
+#define MH_DINPUTS MHp->inputs
 #define MH_IINPUTS MHp->iinputs
 
 #define Mtail (MHp->toggletail)
